--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
             shasum -a256 ./batch > batch.sha256
             go build -o batch1
             shasum -a256 ./batch1 > batch1.sha256
-            if ! cmp -s batch.sha256 batch1.sha256; then
+            if cmp --silent -- batch.sha256 batch1.sha256; then
+              echo "files contents are identical"
+            else
               echo >&2 "Reproducible build broken"; cat batch.sha256; cat batch1.sha256; exit 1
             fi
